# wake_and_run

./: .gitignore  Cargo.toml  README.md  bacon.toml  task_creation.ps1
.github/workflows/: release.yml
crates/checker/: Cargo.toml
crates/checker/src/: guid.rs  main.rs
crates/shared/: Cargo.toml
crates/shared/src/: lib.rs  macros.rs
crates/sleep/: Cargo.toml
crates/sleep/src/: cli.rs  main.rs
